--- a/deployments/prod.docker-compose.yaml
+++ b/deployments/prod.docker-compose.yaml
@@ -3,9 +3,9 @@ services:
     image: ghcr.io/konstantin-kukharev/frontend:latest
     container_name: nginx
     volumes:
-      - ./nginx/prod.default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/key.key:/etc/nginx/ssl/private.key
-      - ./nginx/crt.crt:/etc/nginx/ssl/certificate.crt
+      - nginx/prod.default.conf:/etc/nginx/conf.d/default.conf
+      - nginx/key.key:/etc/nginx/ssl/private.key
+      - nginx/crt.crt:/etc/nginx/ssl/certificate.crt
     ports:
       - "80:80"
       - "443:443"
