--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,9 @@ jobs:
         env:
           IMAGE_REF: ${{ steps.meta.outputs.tags }}
         run: |
-          docker-compose --context remote -f docker-compose.yml up -d
+          docker compose --context remote pull
+          docker compose --context remote -f docker-compose.yml up --force-recreate --build -d
+          docker --context remote image prune -f
 
       - name: cleanup
         run: rm -rf ~/.ssh
