--- a/deployments/production/nginx/example.default.conf
+++ b/deployments/production/nginx/example.default.conf
@@ -3,11 +3,12 @@ server {
     # Listen to port 443 on both IPv4 and IPv6.
     listen 443 ssl default_server reuseport;
     listen [::]:443 ssl default_server reuseport;
-    server_name variegate.ru;
+    # SET YOUR DOMAIN_NAME
+    # server_name DOMAIN_NAME;
 
     # Load the certificate files.
-    ssl_certificate         /etc/nginx/ssl/certificate.pem;
-    ssl_certificate_key     /etc/nginx/ssl/private.pem;
+    ssl_certificate         /etc/nginx/ssl/crt.crt;
+    ssl_certificate_key     /etc/nginx/ssl/key.key;
 
     # Redirect non-https traffic to https
     if ($scheme != "https") {
@@ -20,6 +21,7 @@ server {
     # what file to server as index
     index index.html;
 
+    # BACKEND
     location @backend {
         proxy_pass http://api_server:8080;
     }
@@ -28,6 +30,7 @@ server {
         try_files $uri @backend;
     }
 
+    # FRONTEND
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ $uri.html /index.html;
