--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -53,4 +53,4 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Run Unit tests.
-        run: go test ./... -cover && go test -v -race ./...
+        run: go test -v ./...
