--- a/deployments/production/docker-compose.yaml
+++ b/deployments/production/docker-compose.yaml
@@ -2,8 +2,9 @@ services:
   nginx:
     image: ghcr.io/konstantin-kukharev/frontend:latest
     container_name: nginx
+    env_file: "./.env"
     volumes:
-      - ./nginx/prod.default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/key.key:/etc/nginx/ssl/private.key
       - ./nginx/crt.crt:/etc/nginx/ssl/certificate.crt
     ports:
@@ -11,6 +12,7 @@ services:
       - "443:443"
     depends_on:
       - api_server
+    command: "-g daemon off;"
 
   api_server:
     image: ghcr.io/konstantin-kukharev/api:latest
