--- a/deployments/production/nginx/Dockerfile
+++ b/deployments/production/nginx/Dockerfile
@@ -17,4 +17,4 @@ RUN npm run build
 FROM nginx:1.16.0-alpine
 COPY --from=builder /app/dist /usr/share/nginx/html
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT [ "nginx" ]
