--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -172,12 +172,13 @@ jobs:
         uses: actions/checkout@v4
       - name: Send event
         run: |
-          rel=$(git log $(git describe HEAD~ --tags --abbrev=0)..HEAD --pretty='format:* %h %s%n  * %an <%ae>' --no-merges)
-          curl -X POST \
-          -F 'text="новый релиз ${{ github.event.release.tag_name }}  
+          text="новый релиз ${{ github.event.release.tag_name }}  
           
-          echo $rel
+          $(git log $(git describe HEAD~ --tags --abbrev=0)..HEAD --pretty='format:* %h %s%n  * %an <%ae>' --no-merges)
 
-          See changes: https://github.com/${{ github.repository }}/releases/tag/${{ github.event.release.tag_name }}"' \
+          See changes: https://github.com/${{ github.repository }}/releases/tag/${{ github.event.release.tag_name }}"
+
+          curl -X POST \
+          -F $text \
           -F 'reply_markup={"inline_keyboard":[[{"text":"Deploy ${{ github.event.release.tag_name }}","callback_data":"${{ github.event.release.tag_name }}"}]],"selective":true}' \
           https://api.telegram.org/bot${{ secrets.TELEGRAM_TOKEN }}/sendMessage?chat_id=${{ secrets.TELEGRAM_TO }}
