--- a/deployments/development/nginx/Dockerfile
+++ b/deployments/development/nginx/Dockerfile
@@ -1,6 +1,6 @@
 FROM nginx:latest
 
 # Copy Nginx configuration file to the container
-COPY deployments/development/nginx/default.conf /etc/nginx/conf.d/default.conf
-# Expose port 80
-EXPOSE 80
+COPY default.conf /etc/nginx/conf.d/default.conf
+
+ENTRYPOINT ["nginx-debug"]
