--- a/deployments/development/nginx/default.conf
+++ b/deployments/development/nginx/default.conf
@@ -3,10 +3,15 @@ server {
     server_name localhost;
 
     gzip on;
-    gzip_types text/html application/javascript application/json text/css;
+    gzip_types application/javascript application/json text/css;
 
     # what file to server as index
     index index.html;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/access.log;
+
+    add_header Access-Control-Allow-Origin *;
 
     location @backend {
         proxy_pass http://api_server:8080;
