--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,9 @@
     "@types/react-dom": "^18.2.0",
     "eruda": "^3.0.1",
     "react": "^18.2.0",
+    "react-catalog-view": "^2.0.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.23.0",
     "typescript": "^5.7.3"
   },
